--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -25,11 +25,13 @@
 
 body {
 	background-size: 100%;
-	background: #2d3739;
-	background-repeat: repeat;
+	background-color: var(--global-background-color);
 	color: rgb(255, 255, 255);
 	overflow-x: hidden;
 	width: 100%;
+	height: 100vh;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 .sidenav {
@@ -41,7 +43,7 @@ body {
 	left: 0;
 	overflow-x: hidden;
 	padding-top: 20px;
-	background-color: var(--accent-color);
+	background-color: var(--sidebar-background-color);
 
 	.menu-item {
 		margin: 3px;
@@ -57,8 +59,6 @@ body {
 			color: #fff;
 			transition: all 0.25s;
 			border-style: none;
-
-			border-color: var(--darker-accent);
 
 			svg {
 				position: relative;
@@ -78,10 +78,10 @@ body {
 			}
 
 			&:hover {
-				border: 0px solid var(--darker-accent);
+				border: 0px solid var(--sidebar-button-hover);
 				border-radius: 100px;
 
-				background-color: var(--darker-accent);
+				background-color: var(--sidebar-button-hover);
 
 				margin: inherit;
 				cursor: pointer;
@@ -100,8 +100,8 @@ body {
 		img {
 			margin-bottom: 25px;
 			transition: all 0.5s;
-			border: 5px solid var(--text-color);
-			background-color: var(--text-color);
+			border: 5px solid var(--sidebar-logo-color);
+			background-color: var(--sidebar-logo-color);
 			border-radius: 100%;
 		}
 	}
