--- a/src/styles/Preferences.scss
+++ b/src/styles/Preferences.scss
@@ -165,3 +165,61 @@
 .main {
 	margin: 10px 25px 0 176px;
 }
+
+//  SCSS to display plugins as cards
+.cards {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	padding: 0;
+	list-style: none;
+}
+
+//  SCSS to display a single plugin card
+.card {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 0 0 1.5rem;
+	padding: 0;
+	width: 300px;
+	height: 170px;
+	background: var(--settings-container-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: var(--radius-normal);
+	// Gap between cards
+	&:not(:last-child) {
+		margin-right: 1.5rem;
+	}
+	.card-header {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		font-weight: bold;
+		align-items: center;
+		padding: 8px 100px;
+		width: 100%;
+		height: 25px;
+	}
+
+	a {
+		text-decoration: none;
+		color: var(--font-color);
+		&:visited,
+		&:hover,
+		&:active {
+			color: var(--font-color);
+		}
+	}
+	.author {
+		font-size: 0.8rem;
+	}
+
+	.version {
+		font-size: 0.8rem;
+	}
+}
