Styles the plugin card on the settings page
- Adds +3 strings

--- a/src/styles/Library.scss
+++ b/src/styles/Library.scss
@@ -75,7 +75,7 @@
 				transition: all 0.25s;
 				align-self: center;
 				margin-bottom: 1rem;
-				box-shadow: 0px 10px 24px 7px rgba(0, 0, 0, 0.393);
+				box-shadow: 0px 10px 24px 7px var(--shadow-color);
 			}
 
 			p {
