--- a/src/styles/Preferences.scss
+++ b/src/styles/Preferences.scss
@@ -15,7 +15,7 @@
 		height: 188px;
 
 		background: var(--settings-container-color);
-		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+		box-shadow: 0px 4px 4px var(--shadow-color);
 		border-radius: var(--radius-normal);
 
 		.header {
@@ -116,7 +116,7 @@
 	height: auto;
 
 	background: var(--settings-container-color);
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	box-shadow: 0px 4px 4px var(--shadow-color);
 	border-radius: var(--radius-normal);
 
 	.header {
@@ -181,45 +181,100 @@
 //  SCSS to display a single plugin card
 .card {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	margin: 0 0 1.5rem;
+	margin: 20px 0 1.5rem;
 	padding: 0;
-	width: 300px;
-	height: 170px;
-	background: var(--settings-container-color);
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	width: 350px;
+	height: 190px;
+	//background: var(--settings-container-color);
+	background: var(--settings-container-button-color);
+	box-shadow: 0px 0px 20px var(--shadow-color);
 	border-radius: var(--radius-normal);
 	// Gap between cards
 	&:not(:last-child) {
 		margin-right: 1.5rem;
 	}
-	.card-header {
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		font-weight: bold;
-		align-items: center;
-		padding: 8px 100px;
-		width: 100%;
-		height: 25px;
-	}
 
-	a {
-		text-decoration: none;
-		color: var(--font-color);
-		&:visited,
-		&:hover,
-		&:active {
-			color: var(--font-color);
+	.card-left {
+		flex-grow: 1;
+		padding-left: 15px;
+		height: 85%;
+
+		p.card-header {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			font-weight: bold;
+			align-items: center;
+			padding: 0px 30px 2px 0;
+			width: 87%;
+			height: 25px;
+			margin: 0 0 0 0;
+
+			border-bottom: 1px solid white;
+
+			a {
+				position: relative;
+				top: 2px;
+				left: 7px;
+
+				text-decoration: none;
+				color: var(--font-color);
+				&:visited,
+				&:hover,
+				&:active {
+					color: var(--font-color);
+				}
+			}
+		}
+
+		.card-footer {
+			display: flex;
+			flex-direction: column;
+			padding-top: 10px;
+
+			.author {
+				font-size: 0.8rem;
+			}
+
+			.version {
+				font-size: 0.8rem;
+			}
+
+			.desc {
+				font-size: 0.8rem;
+				width: 230px;
+			}
 		}
 	}
-	.author {
-		font-size: 0.8rem;
-	}
 
-	.version {
-		font-size: 0.8rem;
+	.buttons {
+		display: flex;
+		flex-direction: column;
+		width: 0px;
+		align-items: center;
+
+		button {
+			position: relative;
+			top: -68px;
+			left: -25px;
+
+			background-color: inherit;
+			border-style: none;
+			color: var(--font-color);
+			opacity: 1;
+			padding: 0;
+			margin: 0;
+
+			cursor: pointer;
+		}
+	}
+}
+
+@media (hover: hover) {
+	.card:hover .buttons > button {
+		opacity: 0.6;
 	}
 }
