--- a/src/styles/Preferences.scss
+++ b/src/styles/Preferences.scss
@@ -264,11 +264,17 @@
 			background-color: inherit;
 			border-style: none;
 			color: var(--font-color);
-			opacity: 1;
+			opacity: 0.6;
 			padding: 0;
 			margin: 0;
 
 			cursor: pointer;
 		}
+	}
+}
+
+@media (hover: hover) {
+	.card:hover .buttons > button {
+		opacity: 1;
 	}
 }
