--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -161,8 +161,33 @@
     }
 }
 
+.toast {
+    button {
+        background-color: #121212; //var(--library-element-background);
+        border-color: #323232; // var(--library-border-color);
+        border-style: solid;
+        border-width: 1px;
+        border-radius: 4px; // var(--radius-normal);
+        box-shadow: 0px 2px 8px #00000055;
+
+        padding: 5px 15px;
+        margin-bottom: 10px;
+
+        color: var(--font-color);
+        font-size: 16px;
+        cursor: pointer;
+        transition: all 0.25s;
+    }
+
+    p {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 5px;
+    }
+}
+
 .title-el {
-     margin: 0px 0 10px 0;
+    margin: 0px 0 10px 0;
 }
 
 .main {
