--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -173,6 +173,8 @@
         padding: 5px 15px;
         margin-bottom: 10px;
 
+        transform: translateX(50%);
+
         color: var(--font-color);
         font-size: 16px;
         cursor: pointer;
