--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -30,8 +30,8 @@ body {
     overflow-x: hidden;
     width: 100%;
     height: 100vh;
-    margin-top: 0;
-    margin-bottom: 0;
+
+    margin: 0; /* <-- Here is the breaking margin*/
 }
 
 .sidenav {
