--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
+@import "Browse", "Library", "Modal", "Preferences";
+
 :root {
     font-family: 'Montserrat';
     font-size: 16px;
