--- a/src/styles/_Modal.scss
+++ b/src/styles/_Modal.scss
@@ -16,15 +16,15 @@
         padding: 15px;
         max-width: 350px;
 
-        border: 1px solid var(--modal-border-color);
-        border-radius: var(--radius-normal);
+        border: 1px solid #323232;
+        border-radius: 4px;
 
-        background-color: var(--modal-background-color);
+        background-color: #0b0d0e;
 
         span {
-            color: var(--font-color);
+            color: #dddddd;
             font-family: 'Montserrat';
-            font-weight: var(--modal-fetch-font-weight);
+            font-weight: 500;
 
             &::after {
                 content: ':';
@@ -35,16 +35,16 @@
             text-align: center;
             transition: all 0.25s;
             font-family: 'Montserrat';
-            background-color: var(--modal-fetch-background-color);
-            color: var(--font-color);
-            border: 1px solid var(--modal-fetch-background-color);
-            border-radius: var(--radius-normal);
+            background-color: #0b0d0e;
+            color: #dddddd;
+            border: 1px solid #0b0d0e;
+            border-radius: 4px;
             padding: 10px;
 
             &:hover {
                 cursor: pointer;
-                border-color: var(--modal-fetch-background-color);
-                background-color: var(--modal-fetch-hover-color);
+                border-color: #0b0d0e;
+                background-color: #2d3739;
             }
         }
     }
@@ -57,12 +57,12 @@
         button.fetch-meta {
             transition: all 0.25s;
 
-            color: var(--font-color);
-            background-color: var(--modal-background-color);
-            border-color: var(--modal-border-color);
+            color: #dddddd;
+            background-color: #0b0d0e;
+            border-color: #323232;
             border-style: solid;
             border-width: 1px;
-            border-radius: var(--radius-normal);
+            border-radius: 4px;
             margin: 15px 0;
 
             font-size: 15px;
@@ -80,12 +80,12 @@
 
         input,
         textarea {
-            color: var(--font-color);
-            background-color: var(--modal-background-color);
-            border-color: var(--modal-element-border-color);
+            color: #dddddd;
+            background-color: #0b0d0e;
+            border-color: #323232;
             border-style: solid;
             border-width: 1px;
-            border-radius: var(--radius-normal);
+            border-radius: 4px;
             padding: 8px 8px 8px 8px;
 
             outline-style: none;
@@ -93,25 +93,25 @@
             font-size: 15px;
 
             &::placeholder {
-                color: var(--modal-placeholder-color);
+                color: #fff;
                 font-size: 15px;
             }
         }
 
         .show-path {
-            color: var(--font-color);
+            color: #dddddd;
             display: flex;
             flex-direction: row;
 
             .ng-button {
                 transition: all 0.25s;
 
-                color: var(--font-color);
-                background-color: var(--modal-background-color);
-                border-color: var(--modal-border-color);
+                color: #dddddd;
+                background-color: #0b0d0e;
+                border-color: #323232;
                 border-style: solid;
                 border-width: 1px;
-                border-radius: var(--radius-normal);
+                border-radius: 4px;
                 //margin-bottom: 16px;
                 //margin-top: 16px;
                 margin: 0 0 10px;
@@ -132,10 +132,10 @@
             img {
                 border-style: solid;
                 border-width: 1px;
-                border-radius: var(--radius-normal);
+                border-radius: 4px;
                 padding: 5px;
-                background-color: var(--modal-img-background-color);
-                border-color: var(--modal-img-border-color);
+                background-color: #0b0d0e;
+                border-color: #323232;
                 margin-bottom: 8px;
             }
         }
@@ -146,11 +146,11 @@
         flex-flow: row-reverse;
 
         button {
-            background-color: var(--modal-background-color);
-            border: 1px solid var(--modal-element-border-color);
-            border-radius: var(--radius-normal);
+            background-color: #0b0d0e;
+            border: 1px solid #323232;
+            border-radius: 4px;
             font-size: 1rem;
-            color: var(--font-color);
+            color: #dddddd;
             padding: 8px 16px;
 
             &:hover {
@@ -163,11 +163,11 @@
 
 .toast {
     button {
-        background-color: #121212; //var(--library-element-background);
-        border-color: #323232; // var(--library-border-color);
+        background-color: #121212;
+        border-color: #323232;
         border-style: solid;
         border-width: 1px;
-        border-radius: 4px; // var(--radius-normal);
+        border-radius: 4px;
         box-shadow: 0px 2px 8px #00000055;
 
         padding: 5px 15px;
@@ -175,7 +175,7 @@
 
         transform: translateX(50%);
 
-        color: var(--font-color);
+        color: #dddddd;
         font-size: 16px;
         cursor: pointer;
         transition: all 0.25s;
