--- a/src/styles/_Browse.scss
+++ b/src/styles/_Browse.scss
@@ -7,7 +7,7 @@
     height: 69px;
 
     input {
-        margin: 0 0 2rem 0;
+        margin: 0 0.5rem 2rem 0;
         color: #dddddd;
         font-size: 1rem;
         padding: 8px 8px 8px 8px;
